<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <!-- Game title-->
    <TextView
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="@font/awmu"
        android:textSize="40sp"
        android:text="@string/game_title_text"/>

    <!-- Highest score -->
    <TextView
        android:id="@+id/highest_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highest_score_text"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="@font/plaguard"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="80dp"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/brown"
        android:gravity="center"
        android:text="@string/start_button_text"
        android:fontFamily="@font/plaguard"
        android:textColor="@color/white" />

</LinearLayout>